--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 # Site settings
-title:
-email:
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+title: Title for site
+email: email@email.email
+description: >
+  Description for site
+baseurl: "/createive-theme-jekyll/" # the subpath of your site, e.g. /blog/
+url: "https://ribab.github.io" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
+#twitter_username:
+#github_username:
 
 # Build settings
 markdown: kramdown
